personalisation et ajout photos

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <div class="col-md-4 ">
 
   <-- placer la photo dans le dossier image ou ajouter la photo de profil github..   afficher la photo de profil dans un nouvelle onglet et copier l'URL-->
-        <img src="images/photo.jpg" alt="Photo" class="img-fluid rounded-circle mb-3" width="150">
-        <h2 class="h4">Prénom Nom</h2>
-        <p>contact@exemple.com</p>
-        <p>linkedin.com/in/moi</p>
+        <img src="images/IMG_1646.JPEG" alt="Photo" class="img-fluid rounded-circle mb-3" width="150">
+        <h2 class="h4">Ryan Gautier</h2>
+        <p>ryangautier141207@gmail.com</p>
+        <p>+33630940840</p>
       </div>
       <div class="col-md-8">
         <h3>Profil</h3>
