--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       </div>
       <div class="col-md-8">
         <h3>Profil</h3>
-        <p>Étudiant passionné par le web...</p>
+        <p>Étudiant passionné par le web... ou pas</p>
         <h3>Compétences</h3>
         <ul><li>HTML, CSS, JS</li></ul>
         <h3>Expérience</h3>
-        <p>Stage WebAgency - avril 2024</p>
+        <p>Stage electro breizh pledran - novembre 2024</p>
         <h3>Formation</h3>
         <p>Bac Pro CIEL - 2024/2026</p>
       </div>
