--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h3>Compétences</h3>
         <ul><li>HTML, CSS, JS</li></ul>
         <h3>Expérience</h3>
-        <p>Stage electro breizh pledran - novembre 2024</p>
+        <p>Stage electro breizh Pledran - novembre 2024</p>
         <h3>Formation</h3>
         <p>Bac Pro CIEL - 2024/2026</p>
       </div>
